[tool.poetry]
name = "mp-baselines"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mp_baselines"}]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.22"
matplotlib = "^3"
cholespy = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
